// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`entity generator > generates OrganizationOwned entity when ownership is organization 1`] = `
{
  "entities/pfx_order/entity.yml": {
    "Entity": {
      "EntityInfo": {
        "entity": {
          "@Name": "pfx_order",
          "ActivityTypeMask": "",
          "AutoCreateAccessTeams": 0,
          "AutoRouteToOwnerQueue": 0,
          "CanChangeHierarchicalRelationship": 1,
          "CanChangeTrackingBeEnabled": 1,
          "CanCreateAttributes": 1,
          "CanCreateCharts": 1,
          "CanCreateForms": 1,
          "CanCreateViews": 1,
          "CanEnableSyncToExternalSearchIndex": 1,
          "CanModifyAdditionalSettings": 1,
          "CanModifyAuditSettings": 1,
          "CanModifyConnectionSettings": 1,
          "CanModifyDuplicateDetectionSettings": 1,
          "CanModifyMailMergeSettings": 1,
          "CanModifyMobileClientOffline": 1,
          "CanModifyMobileClientReadOnly": 1,
          "CanModifyMobileClientVisibility": 1,
          "CanModifyMobileVisibility": 1,
          "CanModifyQueueSettings": 1,
          "ChangeTrackingEnabled": 0,
          "DaysSinceRecordLastModified": 0,
          "Descriptions": {
            "Description": {
              "@description": "",
              "@languagecode": 1033,
            },
          },
          "EnforceStateTransitions": 0,
          "EntityColor": "",
          "EntityHelpUrl": "",
          "EntityHelpUrlEnabled": 0,
          "EntitySetName": "pfx_orders",
          "IconVectorName": "",
          "IntroducedVersion": "1.0.0",
          "IsActivity": 0,
          "IsActivityParty": 0,
          "IsAuditEnabled": 0,
          "IsBPFEntity": 0,
          "IsBusinessProcessEnabled": 0,
          "IsCollaboration": 0,
          "IsConnectionsEnabled": 0,
          "IsCustomizable": 1,
          "IsDocumentManagementEnabled": 0,
          "IsDocumentRecommendationsEnabled": 0,
          "IsDuplicateCheckSupported": 1,
          "IsEnabledForExternalChannels": 0,
          "IsInteractionCentricEnabled": 0,
          "IsKnowledgeManagementEnabled": 0,
          "IsMSTeamsIntegrationEnabled": 0,
          "IsMailMergeEnabled": 1,
          "IsMapiGridEnabled": 1,
          "IsMappable": 1,
          "IsOfflineInMobileClient": 0,
          "IsOneNoteIntegrationEnabled": 0,
          "IsQuickCreateEnabled": 0,
          "IsReadOnlyInMobileClient": 0,
          "IsReadingPaneEnabled": 1,
          "IsRenameable": 1,
          "IsReplicated": 0,
          "IsReplicationUserFiltered": 0,
          "IsRequiredOffline": 0,
          "IsRetrieveAuditEnabled": 0,
          "IsRetrieveMultipleAuditEnabled": 0,
          "IsSLAEnabled": 0,
          "IsSolutionAware": 0,
          "IsVisibleInMobile": 0,
          "IsVisibleInMobileClient": 0,
          "LocalizedCollectionNames": {
            "LocalizedCollectionName": {
              "@description": "Orders",
              "@languagecode": 1033,
            },
          },
          "LocalizedNames": {
            "LocalizedName": {
              "@description": "Order",
              "@languagecode": 1033,
            },
          },
          "MobileOfflineFilters": "",
          "OwnershipTypeMask": "OrganizationOwned",
          "SyncToExternalSearchIndex": 0,
        },
      },
      "Name": {
        "#text": "pfx_order",
        "@LocalizedName": "Order",
        "@OriginalName": "Order",
      },
    },
  },
}
`;

exports[`entity generator > generates UserOwned entity when ownership is user 1`] = `
{
  "entities/pfx_order/entity.yml": {
    "Entity": {
      "EntityInfo": {
        "entity": {
          "@Name": "pfx_order",
          "ActivityTypeMask": "",
          "AutoCreateAccessTeams": 0,
          "AutoRouteToOwnerQueue": 0,
          "CanChangeHierarchicalRelationship": 1,
          "CanChangeTrackingBeEnabled": 1,
          "CanCreateAttributes": 1,
          "CanCreateCharts": 1,
          "CanCreateForms": 1,
          "CanCreateViews": 1,
          "CanEnableSyncToExternalSearchIndex": 1,
          "CanModifyAdditionalSettings": 1,
          "CanModifyAuditSettings": 1,
          "CanModifyConnectionSettings": 1,
          "CanModifyDuplicateDetectionSettings": 1,
          "CanModifyMailMergeSettings": 1,
          "CanModifyMobileClientOffline": 1,
          "CanModifyMobileClientReadOnly": 1,
          "CanModifyMobileClientVisibility": 1,
          "CanModifyMobileVisibility": 1,
          "CanModifyQueueSettings": 1,
          "ChangeTrackingEnabled": 0,
          "DaysSinceRecordLastModified": 0,
          "Descriptions": {
            "Description": {
              "@description": "",
              "@languagecode": 1033,
            },
          },
          "EnforceStateTransitions": 0,
          "EntityColor": "",
          "EntityHelpUrl": "",
          "EntityHelpUrlEnabled": 0,
          "EntitySetName": "pfx_orders",
          "IconVectorName": "",
          "IntroducedVersion": "1.0.0",
          "IsActivity": 0,
          "IsActivityParty": 0,
          "IsAuditEnabled": 0,
          "IsBPFEntity": 0,
          "IsBusinessProcessEnabled": 0,
          "IsCollaboration": 0,
          "IsConnectionsEnabled": 0,
          "IsCustomizable": 1,
          "IsDocumentManagementEnabled": 0,
          "IsDocumentRecommendationsEnabled": 0,
          "IsDuplicateCheckSupported": 1,
          "IsEnabledForExternalChannels": 0,
          "IsInteractionCentricEnabled": 0,
          "IsKnowledgeManagementEnabled": 0,
          "IsMSTeamsIntegrationEnabled": 0,
          "IsMailMergeEnabled": 1,
          "IsMapiGridEnabled": 1,
          "IsMappable": 1,
          "IsOfflineInMobileClient": 0,
          "IsOneNoteIntegrationEnabled": 0,
          "IsQuickCreateEnabled": 0,
          "IsReadOnlyInMobileClient": 0,
          "IsReadingPaneEnabled": 1,
          "IsRenameable": 1,
          "IsReplicated": 0,
          "IsReplicationUserFiltered": 0,
          "IsRequiredOffline": 0,
          "IsRetrieveAuditEnabled": 0,
          "IsRetrieveMultipleAuditEnabled": 0,
          "IsSLAEnabled": 0,
          "IsSolutionAware": 0,
          "IsVisibleInMobile": 0,
          "IsVisibleInMobileClient": 0,
          "LocalizedCollectionNames": {
            "LocalizedCollectionName": {
              "@description": "Orders",
              "@languagecode": 1033,
            },
          },
          "LocalizedNames": {
            "LocalizedName": {
              "@description": "Order",
              "@languagecode": 1033,
            },
          },
          "MobileOfflineFilters": "",
          "OwnershipTypeMask": "UserOwned",
          "SyncToExternalSearchIndex": 0,
        },
      },
      "Name": {
        "#text": "pfx_order",
        "@LocalizedName": "Order",
        "@OriginalName": "Order",
      },
    },
  },
}
`;

exports[`entity generator > generates expected output for minimal valid input 1`] = `
{
  "entities/pfx_order/entity.yml": {
    "Entity": {
      "EntityInfo": {
        "entity": {
          "@Name": "pfx_order",
          "ActivityTypeMask": "",
          "AutoCreateAccessTeams": 0,
          "AutoRouteToOwnerQueue": 0,
          "CanChangeHierarchicalRelationship": 1,
          "CanChangeTrackingBeEnabled": 1,
          "CanCreateAttributes": 1,
          "CanCreateCharts": 1,
          "CanCreateForms": 1,
          "CanCreateViews": 1,
          "CanEnableSyncToExternalSearchIndex": 1,
          "CanModifyAdditionalSettings": 1,
          "CanModifyAuditSettings": 1,
          "CanModifyConnectionSettings": 1,
          "CanModifyDuplicateDetectionSettings": 1,
          "CanModifyMailMergeSettings": 1,
          "CanModifyMobileClientOffline": 1,
          "CanModifyMobileClientReadOnly": 1,
          "CanModifyMobileClientVisibility": 1,
          "CanModifyMobileVisibility": 1,
          "CanModifyQueueSettings": 1,
          "ChangeTrackingEnabled": 0,
          "DaysSinceRecordLastModified": 0,
          "Descriptions": {
            "Description": {
              "@description": "",
              "@languagecode": 1033,
            },
          },
          "EnforceStateTransitions": 0,
          "EntityColor": "",
          "EntityHelpUrl": "",
          "EntityHelpUrlEnabled": 0,
          "EntitySetName": "pfx_orders",
          "IconVectorName": "",
          "IntroducedVersion": "1.0.0",
          "IsActivity": 0,
          "IsActivityParty": 0,
          "IsAuditEnabled": 0,
          "IsBPFEntity": 0,
          "IsBusinessProcessEnabled": 0,
          "IsCollaboration": 0,
          "IsConnectionsEnabled": 0,
          "IsCustomizable": 1,
          "IsDocumentManagementEnabled": 0,
          "IsDocumentRecommendationsEnabled": 0,
          "IsDuplicateCheckSupported": 1,
          "IsEnabledForExternalChannels": 0,
          "IsInteractionCentricEnabled": 0,
          "IsKnowledgeManagementEnabled": 0,
          "IsMSTeamsIntegrationEnabled": 0,
          "IsMailMergeEnabled": 1,
          "IsMapiGridEnabled": 1,
          "IsMappable": 1,
          "IsOfflineInMobileClient": 0,
          "IsOneNoteIntegrationEnabled": 0,
          "IsQuickCreateEnabled": 0,
          "IsReadOnlyInMobileClient": 0,
          "IsReadingPaneEnabled": 1,
          "IsRenameable": 1,
          "IsReplicated": 0,
          "IsReplicationUserFiltered": 0,
          "IsRequiredOffline": 0,
          "IsRetrieveAuditEnabled": 0,
          "IsRetrieveMultipleAuditEnabled": 0,
          "IsSLAEnabled": 0,
          "IsSolutionAware": 0,
          "IsVisibleInMobile": 0,
          "IsVisibleInMobileClient": 0,
          "LocalizedCollectionNames": {
            "LocalizedCollectionName": {
              "@description": "Orders",
              "@languagecode": 1033,
            },
          },
          "LocalizedNames": {
            "LocalizedName": {
              "@description": "Order",
              "@languagecode": 1033,
            },
          },
          "MobileOfflineFilters": "",
          "OwnershipTypeMask": "UserOwned",
          "SyncToExternalSearchIndex": 0,
        },
      },
      "Name": {
        "#text": "pfx_order",
        "@LocalizedName": "Order",
        "@OriginalName": "Order",
      },
    },
  },
}
`;

exports[`entity generator > generates system table with unmodified flag 1`] = `
{
  "entities/account/entity.yml": {
    "Entity": {
      "EntityInfo": {
        "entity": {
          "@Name": "account",
          "@unmodified": 1,
        },
      },
      "Name": {
        "#text": "account",
        "@LocalizedName": "Account",
        "@OriginalName": "",
      },
    },
  },
}
`;
